--- a/style.css
+++ b/style.css
@@ -12,10 +12,15 @@
 
 main {
   display: flex;
+  justify-content: space-between;
 }
 
 #evaluation-form {
   display: flex;
   width: 675px;
   flex-direction: column;
+}
+
+#trybewarts-forms-logo{
+  height: 500px;
 }
