--- a/style.css
+++ b/style.css
@@ -18,9 +18,16 @@ main {
 #evaluation-form {
   display: flex;
   width: 675px;
+  height: 50px;
   flex-direction: column;
+  flex-wrap: wrap;
+
 }
 
 #trybewarts-forms-logo {
   height: 500px;
+}
+
+#evaluation-form input select{
+  width: 40%;
 }
