--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Cinzel', serif, sans-serif;
+}
+html {
+  max-width: 1600px;
+  margin: auto;
+}
+body{
+  background-size: cover;
+  background-image: url(images/background.png);
+  background-repeat: no-repeat;
+}
+header {
+  padding: 20px;
+}
+header img {
+  width: 150px;
+}
+
+header h1 {
+  color: white;
+  font-size: 2.5em;
+}
+header #input-senha {
+  margin:0 5px 0 10px;
+}
+
+header #btn-login {
+  padding: 10px 30px 10px 30px;
+  border: none;
+  border-radius: 10px;
+  background-color: indigo;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+header #email, #input-senha {
+  padding: 15px;
+  width: 150px;
+  border: none;
+  border-radius: 10px;
+  font-weight: 600;
+}
 .header {
   display: flex;
   background-color: rgb(50, 167, 145);
@@ -13,13 +60,69 @@
 main {
   display: flex;
   justify-content: space-between;
+
 }
 
 #evaluation-form {
   display: flex;
   width: 675px;
   flex-direction: column;
+  padding: 20px;
 }
+
+#name-container {
+  display: flex;
+  justify-content: center;
+}
+#evaluation-form #input-name, #input-email {
+  margin: 0 10px 0 0;
+}
+#evaluation-form #input-name, #input-lastname, #input-email, #house{
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+}
+#input-name, #input-lastname {
+  width: 100%;
+}
+
+#input-email, #house {
+  width: 50%;
+}
+
+#div-select {
+  display: flex;
+  padding: 10px 0 10px 0;
+}
+
+#family-content {
+  display: flex;
+}
+
+#family, #content {
+  width: 50%;
+  height: 100px;
+}
+
+#content-flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 60%;
+}
+
+#content-flex div:nth-child(odd) {
+  margin: 1% 0;
+}
+#family div {
+  margin: 1% 0;
+}
+
+
+hr {
+  margin: 10px 0;
+}
+
 
 #trybewarts-forms-logo {
   height: 500px;
@@ -27,4 +130,24 @@ main {
 
 #nota {
   display: flex;
+  justify-content: space-between;
+  margin: 3% 0;
+}
+
+#agree {
+  margin: 1% 0;
+}
+
+#submit-btn {
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: indigo;
+  color: white;
+  cursor: pointer;
+}
+
+footer {
+  /* width: 50%; */
+  text-align: center;
 }
